<resources>
    <string name="app_name">Fitracker</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bench_press">Bench Press</string>
    <string name="deadlift">Deadlift</string>
    <string name="squat">Squat</string>
    <string name="kg">kg</string>
    <string name="rep">rep.</string>
    <string name="fitracker">Fitracker</string>
    <string name="tools">Tools</string>
    <string name="menu_timer">Timer</string>
    <string name="menu_tdee">TDEE Calculator</string>
    <string name="menu_1rm">1 RM Calculator</string>
    <string name="menu_recommend">Recommended Video</string>
    <string name="log_out">Log Out</string>

    <string name="all_date_format">yyyy-MM-dd, HH:mm:ss</string>
    <string name="short_date_format">MM-dd</string>

    <!--Period filter tag-->
    <string name="tag_period_filter_1m">1M</string>
    <string name="tag_period_filter_3m">3M</string>
    <string name="tag_period_filter_6m">6M</string>
    <string name="tag_period_filter_1y">1Y</string>
    <string name="tag_period_filter_all">ALL</string>

    <!--Bottom nav view-->
    <string name="title_workout">Workout</string>
    <string name="title_nutrition">Nutrition</string>
    <string name="title_inbody">In-body</string>

    <!--Current fragment type-->
    <string name="workout">workout</string>
    <string name="workout_title">Workout</string>
    <string name="workout_motion">motion</string>
    <string name="motion_title">Select Motion</string>
    <string name="workout_record">workout record</string>
    <string name="workout_record_title">Record Workout</string>
    <string name="workout_analysis">workout analysis</string>
    <string name="workout_analysis_title">Workout Analysis</string>
    <string name="nutrition">nutrition</string>
    <string name="nutrition_title">Nutrition</string>
    <string name="nutrition_record">nutrition record</string>
    <string name="nutrition_record_title">You Are What You Eat</string>
    <string name="nutrition_analysis">nutrition analysis</string>
    <string name="nutrition_analysis_title">Nutrition Analysis</string>
    <string name="inbody">inbody</string>
    <string name="inbody_title">In-body</string>
    <string name="inbody_record">inbody record</string>
    <string name="inbody_record_title">Record In-body</string>
    <string name="inbody_analysis">inbody analysis</string>
    <string name="inbody_analysis_title">In-body Analysis</string>
    <string name="timer">timer</string>
    <string name="timer_title">Interval Timer</string>
    <string name="tdee">tdee</string>
    <string name="tdee_title">Total Daily Energy Expenditure</string>
    <string name="one_rm">one rm</string>
    <string name="one_rm_title">Repetition Maximum</string>
    <string name="recommended">recommended</string>
    <string name="recommended_title">Recommended Video</string>
    <string name="dont_show_record_or_analysis">dont show record or analysis</string>

    <!--Workout fragment-->
    <string name="week_mode">Week mode</string>
    <string name="weight_kg">Weight [Kg]</string>
    <string name="repeats">Repeats</string>
    <string name="set">Set</string>
    <string name="no_data_workout">No Workout Data</string>

    <!--Workout record fragment-->
    <string name="number_of_set"># of set</string>
    <string name="weight">Weight</string>
    <string name="rest_timer">Rest Timer</string>
    <string name="stop_rest_timer_to_upload">Stop rest timer to upload workout data.</string>

    <!--All record fragment-->
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>

    <!--Nutrition fragment-->
    <string name="total">Total</string>
    <string name="protein">Protein</string>
    <string name="carbohydrate">Carbohydrate</string>
    <string name="fat">Fat</string>
    <string name="gram">g</string>
    <string name="calories">Cal.</string>
    <string name="no_data_nutrition">No Nutrition Data</string>

    <!--Nutrition record fragment-->
    <string name="title">Title</string>
    <string name="protein_g">Protein [g]</string>
    <string name="carbohydrate_g">Carbohydrate [g]</string>
    <string name="fat_g">Fat [g]</string>
    <string name="save">Save</string>

    <!--IN-body fragment-->
    <string name="body_weight">Body Weight</string>
    <string name="skeletal_muscle">Skeletal Muscle</string>
    <string name="body_fat">Body Fat</string>
    <string name="percentage">%</string>
    <string name="no_data_inbody">No In-body Data</string>
    <string name="body_weight_kg">Body Weight [kg]</string>
    <string name="skeletal_muscle_percentage">Skeletal Muscle [%]</string>
    <string name="body_fat_percentage">Body Fat [%]</string>

    <!--Analysis common string-->
    <string name="period_1m">1 M</string>
    <string name="period_3m">3 M</string>
    <string name="period_6m">6 M</string>
    <string name="period_1y">1 Y</string>
    <string name="all">ALL</string>

    <!--Workout analysis fragment-->
    <string name="exercise">Exercise</string>
    <string name="graph">Graph</string>
    <string-array name="exercise">
        <item>@string/bench_press</item>
        <item>@string/deadlift</item>
        <item>@string/squat</item>
    </string-array>
    <string-array name="graph_workout">
        <item>@string/max_weight_workout</item>
        <item>@string/volume_workout</item>
        <item>@string/sets_workout</item>
        <item>@string/repeats_workout</item>
    </string-array>
    <string name="max_weight_workout">Max Weight Per Workout</string>
    <string name="volume_workout">Volume Per Workout</string>
    <string name="sets_workout">Sets Per Workout</string>
    <string name="repeats_workout">Repeats Per Workout</string>

    <!--Nutrition analysis fragment-->
    <string name="nutrients">Nutrients</string>
    <string-array name="nutrients">
        <item>@string/total_daily_energy_extracted</item>
        <item>@string/protein</item>
        <item>@string/carbohydrate</item>
        <item>@string/fat</item>
    </string-array>
    <string name="total_daily_energy_extracted">Daily Energy Extracted</string>

    <!--In-body analysis fragment-->
    <string name="filter">Filter</string>
    <string-array name="filter_inbody">
        <item>@string/body_weight_inbody</item>
        <item>@string/skeletal_muscle_inbody</item>
        <item>@string/body_fat_inbody</item>
    </string-array>
    <string name="body_weight_inbody">Body Weight</string>
    <string name="skeletal_muscle_inbody">Skeletal Muscle</string>
    <string name="body_fat_inbody">Body Fat</string>

    <!--Timer-->
    <string name="minutes">Minutes</string>
    <string name="seconds">Seconds</string>
    <string name="rest">Rest</string>
    <string name="start">Start</string>
    <string name="colon">:</string>
    <string name="revise">Revise</string>
    <string name="stop">Stop</string>

    <!--Repetition maximum-->
    <string name="lift_kg">Lift [kg]</string>
    <string name="calculate">Calculate</string>
    <string name="percentage_1rm">% of 1 RM</string>
    <string name="repetitions">Repetitions</string>
    <string name="percent_100">100%</string>
    <string name="repetition_1rm">1</string>
    <string name="percent_97">97%</string>
    <string name="repetition_2rm">2</string>
    <string name="percent_92">92%</string>
    <string name="repetition_4rm">4</string>
    <string name="percent_86">86%</string>
    <string name="repetition_6rm">6</string>
    <string name="percent_81">81%</string>
    <string name="repetition_8rm">8</string>
    <string name="percent_75">75%</string>
    <string name="repetition_10rm">10</string>
    <string name="percent_70">70%</string>
    <string name="repetition_12rm">12</string>
    <string name="percent_50">50%</string>
    <string name="repetition_20rm">20</string>
    <string name="hint">Hint</string>
    <string name="hint_rm">
        Lift should be less than 1000 and accurate to the 2nd digital after the decimal point.
        \n\nRepeats is a positive integer which is less than 37.
        \n\nThe calculation may not always produce accurate results, it should be regarded as starting point of workouts.
        \n\nThis result is based on Brzycki formula.
    </string>

    <!--Total Daily Energy Expenditure-->
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="age">Age</string>
    <string name="height_cm">Height [cm]</string>
    <string name="tdee_cal">TDEE [cal.]</string>
    <string name="activity_level">Activity Level</string>
    <string name="bmr">Basal Metabolic Rate</string>
    <string name="sedentary">Sedentary</string>
    <string name="light_exercise">Light Exercise</string>
    <string name="moderate_exercise">Moderate Exercise</string>
    <string name="heavy_exercise">Heavy Exercise</string>
    <string name="athlete">Athlete</string>
    <string name="format_tdee">%,d</string>
    <string name="hint_tdee">
        Sedentary: little to no exercise
        \nLight Exercise: 1-2 days per week
        \nModerate Exercise: 3-5 days per week
        \nHeavy Exercise: 6-7 days per week
        \nAthlete: 2+ times per day
        \n\nThis result is based on Mifflin-St Jeor formula.
    </string>

    <!--Sign In-->
    <string name="signin">Sign In</string>
    <string name="reset">Reset</string>

    <!--Progress-->
    <string name="uploading">Saving...</string>
    <string name="data_has_been_saved">Complete</string>
    <string name="connecting">Connecting...</string>
    <string name="welcome">Welcome</string>
    <string name="height">Height</string>
    <string name="cm">cm</string>

    <!--String for test-->
    <string name="hello_word">Hello World</string>

</resources>
