<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_timer"
                android:icon="@drawable/ic_menu_camera"
                android:title="@string/menu_timer"/>
        <item
                android:id="@+id/nav_tdee"
                android:icon="@drawable/ic_menu_gallery"
                android:title="@string/menu_tdee"/>
        <item
                android:id="@+id/nav_1rm"
                android:icon="@drawable/ic_menu_slideshow"
                android:title="@string/menu_1rm"/>
        <item
                android:id="@+id/nav_recommended"
                android:icon="@drawable/ic_menu_manage"
                android:title="@string/menu_recommend"/>
    </group>

</menu>
