<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
                name="viewModel"
                type="com.pinhsiang.fitracker.nutrition.analysis.NutritionAnalysisViewModel"/>
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <TextView
                android:id="@+id/title_nutrients"
                android:text="@string/nutrients"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="16dp"
                android:layout_marginStart="16dp"
                android:textColor="@color/colorText"
                android:textSize="18sp"/>
        <Spinner
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/spinner_nutrients" app:layout_constraintStart_toEndOf="@+id/title_nutrients"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="@+id/title_nutrients"
                app:layout_constraintBottom_toBottomOf="@+id/title_nutrients"
                android:textAlignment="viewStart" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"/>

        <TextView
                android:id="@+id/period_1m_nutrition"
                android:text="@string/period_1m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBackground"
                android:textSize="18sp"
                android:background="@drawable/btn_text_border_inverse"
                android:textAlignment="center"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/period_3m_nutrition"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/title_nutrients"
                android:onClick="@{() -> viewModel.selectPeriod1M()}"
                android:layout_marginEnd="4dp"/>
        <TextView
                android:id="@+id/period_3m_nutrition"
                android:text="@string/period_3m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textColor="@color/colorText" android:textSize="18sp"
                android:background="@drawable/btn_text_border" android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/period_1m_nutrition"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/period_6m_nutrition"
                app:layout_constraintTop_toTopOf="@+id/period_1m_nutrition"
                app:layout_constraintBottom_toBottomOf="@+id/period_1m_nutrition"
                android:onClick="@{() -> viewModel.selectPeriod3M()}" android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>
        <TextView
                android:text="@string/period_6m"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/period_6m_nutrition"
                android:textColor="@color/colorText" android:textSize="18sp"
                android:background="@drawable/btn_text_border" android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/period_3m_nutrition"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toStartOf="@+id/period_1y_nutrition"
                app:layout_constraintTop_toTopOf="@+id/period_1m_nutrition"
                app:layout_constraintBottom_toBottomOf="@+id/period_1m_nutrition"
                android:onClick="@{() -> viewModel.selectPeriod6M()}" android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>
        <TextView
                android:text="@string/period_1y"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/period_1y_nutrition"
                android:textColor="@color/colorText" android:textSize="18sp"
                android:background="@drawable/btn_text_border" android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/period_6m_nutrition"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintEnd_toStartOf="@+id/period_all_nutrition"
                app:layout_constraintTop_toTopOf="@+id/period_1m_nutrition"
                app:layout_constraintBottom_toBottomOf="@+id/period_1m_nutrition"
                android:onClick="@{() -> viewModel.selectPeriod1Y()}" android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"/>
        <TextView
                android:text="@string/all"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/period_all_nutrition"
                android:textColor="@color/colorText" android:textSize="18sp"
                android:background="@drawable/btn_text_border" android:textAlignment="center"
                app:layout_constraintStart_toEndOf="@+id/period_1y_nutrition"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintTop_toTopOf="@+id/period_1m_nutrition"
                app:layout_constraintBottom_toBottomOf="@+id/period_1m_nutrition"
                android:onClick="@{() -> viewModel.selectPeriodAll()}" android:layout_marginStart="4dp"/>

        <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/chart_nutrition"
                android:layout_width="0dp"
                android:layout_height="0dp" app:layout_constraintTop_toBottomOf="@+id/period_1m_nutrition"
                android:layout_marginTop="24dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="8dp" android:layout_marginEnd="8dp" android:layout_marginBottom="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>